# vertices

./: .gitignore  CMakeLists.txt  README.md  build_on_xdu_hpc.sh  intel_build.sh  main.cpp  main.h  submit.sh  subtel.sh  todo.md
LICENSE/: LICENSE.MIT.md
data/: b.csv  g.csv  one.csv  r.csv  sunlight.csv
lib/BitmapPlusPlus/: BitmapPlusPlus.hpp  LICENSE.md  README.md
lib/eigen3/: CMakeLists.txt
lib/eigen3/Eigen/: Core
lib/eigen3/cmake/: ComputeCppCompilerChecks.cmake  EigenConfigureTesting.cmake  EigenDetermineOSVersion.cmake  EigenDetermineVSServicePack.cmake  EigenSmokeTestList.cmake  EigenTesting.cmake  EigenUninstall.cmake  FindAdolc.cmake  FindBLAS.cmake  FindBLASEXT.cmake  FindCHOLMOD.cmake  FindComputeCpp.cmake  FindEigen2.cmake  FindEigen3.cmake  FindFFTW.cmake  FindGLEW.cmake  FindGMP.cmake  FindGSL.cmake  FindGoogleHash.cmake  FindHWLOC.cmake  FindKLU.cmake  FindLAPACK.cmake  FindMPFR.cmake  FindMPREAL.cmake  FindMetis.cmake  FindPASTIX.cmake  FindPTSCOTCH.cmake  FindSCOTCH.cmake  FindSPQR.cmake  FindStandardMathLibrary.cmake  FindSuperLU.cmake  FindTriSYCL.cmake  FindUMFPACK.cmake  RegexUtils.cmake  UseEigen3.cmake
lib/thread_pool/: thread_pool.h
lib/transform3d/: trans_forms.cpp  trans_forms_group.cpp  transforms3d.h
models/: mycube.mtl  mycube_x32.mtl
src/: common.h  compatibility.h  main.cpp  main.h
src/basic/: BRDF.cpp  BRDF.h  coordTransform.cpp  coordTransform.h  functionWrapper.h  threadPool.h  threadSafeQueue.h
src/io/: infoAppender.cpp  infoAppender.h  readFace.cpp  readFace.h  readLines.cpp  readLines.h  readMtl.cpp  readMtl.h  readNewItem.cpp  readNewItem.h  readNormal.cpp  readNormal.h  readObj.cpp  readObj.h  readTexture.cpp  readTexture.h  readVertex.cpp  readVertex.h  readers.h
src/logger/: coutLogger.cpp  coutLogger.h  filesystemLogger.cpp  filesystemLogger.h  loggingFacility.h  stdoutLogger.cpp  stdoutLogger.h
src/structures/: box.cpp  box.h  camera.cpp  camera.h  field.cpp  field.h  imagePlane.cpp  imagePlane.h  item.cpp  item.h  mtlDataset.h  node.cpp  node.h  pixel.cpp  pixel.h  point.cpp  point.h  ray.cpp  ray.h  triangle.cpp  triangle.h  vec.cpp  vec.h
src/visualizer/: toBitmap.cpp  toBitmap.h
